--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header>
+      <h1>4択クイズ！</h1>
+      <p>君はいくつ正解できるかな？</p>
+    </header>
     <div id="root"></div>
   </body>
 </html>
